<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:layout_margin="3dp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:id="@+id/barretta"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerVertical="true"
            android:contentDescription="@string/card_relativelayout"
            android:padding="10dp"
            app:srcCompat="@drawable/vertical_line"
            android:tint="@color/colorPrimary"/>

        <TextView
            android:id="@+id/tipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/barretta"
            android:text="@string/tipo"
            android:textSize="20sp"
            android:paddingTop="10dp"
            android:paddingBottom="3dp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <TextView

            android:id="@+id/descrizione"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/barretta"
            android:layout_below="@id/tipo"
            android:text="@string/descrizione"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:id="@+id/more"
            android:layout_width="39dp"
            android:layout_height="73dp"
            android:layout_alignParentEnd="true"
            app:srcCompat="@drawable/more_vert_round24"
            android:contentDescription="@string/menu"
            android:clickable="true"/>


        <TextView
            android:id="@+id/saldo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="-117dp"
            android:layout_marginEnd="15dp"
            android:layout_toStartOf="@+id/more"
            android:text="@string/money"
            android:textSize="20sp"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>


</androidx.cardview.widget.CardView>